--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </ul>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
+  <script src="https://cdn.jsdelivr.net/lodash/4.16.4/lodash.min.js" charset="utf-8"></script>
   <script src="resources/js/control.js" charset="utf-8"></script>
   <script src="resources/js/game.js" charset="utf-8"></script>
 
