starts refactoring game and adds input toggle and display function

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <li class="tile green"></li>
     </ul>
   </div>
+  <div class="controls">
+    <a href="#" id="startGame"><p>start game</p></a>
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
   <script src="https://cdn.jsdelivr.net/lodash/4.16.4/lodash.min.js" charset="utf-8"></script>
   <script src="resources/js/control.js" charset="utf-8"></script>
