adds gameover message

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <h3>Cheat code:</h3>
       <p>Control + Shift  + I </p>
       <h2 class="round">Round: 0</h2>
+      <p id='game_over' class="hidden">Game Over</p>
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
