--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
       <h3>Controls:</h3>
       <p>the arrow keys map to the corresponding color on simon.</p>
       <h3>Cheat code:</h3>
+      <!-- haha awesome -->
       <p>Control + Shift  + I </p>
       <h2 class="round">Round: 0</h2>
       <p id='game_over' class="hidden">Game Over</p>
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
+  <!-- lodash > 9k -->
   <script src="https://cdn.jsdelivr.net/lodash/4.16.4/lodash.min.js" charset="utf-8"></script>
   <script src="resources/js/control.js" charset="utf-8"></script>
   <script src="resources/js/game.js" charset="utf-8"></script>
